0.2.32 - box overflow finally fixed

--- a/style.css
+++ b/style.css
@@ -68,12 +68,14 @@ section {
   /* display: flex;
   justify-content: center;
   align-items: center; */
-  /* position: relative; */
-  width: 90%;
+  position: relative;
+  max-width: 90%;
   padding: 20px;
   margin: 200px auto;
   margin-bottom: 10vh;
   background-image: linear-gradient(rgba(167, 98, 245, 0.411), rgba(105, 226, 247, 0.349));
+  background-attachment: fixed;
+  background-position: center;
   box-shadow:
     3px 3px 0 rgb(255, 251, 0),
   -1px -1px 0 rgb(255, 251, 0),
